; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/smallapp/extr_unbound-host.c_dnslook.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/smallapp/extr_unbound-host.c_dnslook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_ctx = type { i32 }
%struct.ub_result = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"resolve error: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ub_ctx*, i8*, i32, i32, i32)* @dnslook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dnslook(%struct.ub_ctx* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ub_ctx*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.ub_result*, align 8
  store %struct.ub_ctx* %0, %struct.ub_ctx** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.ub_ctx*, %struct.ub_ctx** %6, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = call i32 @ub_resolve(%struct.ub_ctx* %13, i8* %14, i32 %15, i32 %16, %struct.ub_result** %12)
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %5
  %21 = load i32, i32* @stderr, align 4
  %22 = load i32, i32* %11, align 4
  %23 = call i8* @ub_strerror(i32 %22)
  %24 = call i32 @fprintf(i32 %21, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %23)
  %25 = call i32 @exit(i32 1) #3
  unreachable

26:                                               ; preds = %5
  %27 = load i8*, i8** %7, align 8
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load %struct.ub_result*, %struct.ub_result** %12, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @pretty_output(i8* %27, i32 %28, i32 %29, %struct.ub_result* %30, i32 %31)
  %33 = load %struct.ub_result*, %struct.ub_result** %12, align 8
  %34 = getelementptr inbounds %struct.ub_result, %struct.ub_result* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  store i32 %35, i32* %11, align 4
  %36 = load %struct.ub_result*, %struct.ub_result** %12, align 8
  %37 = call i32 @ub_resolve_free(%struct.ub_result* %36)
  %38 = load i32, i32* %11, align 4
  ret i32 %38
}

declare dso_local i32 @ub_resolve(%struct.ub_ctx*, i8*, i32, i32, %struct.ub_result**) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @ub_strerror(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @pretty_output(i8*, i32, i32, %struct.ub_result*, i32) #1

declare dso_local i32 @ub_resolve_free(%struct.ub_result*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
